k8s/altair/infrastructure/configs/crowdsec-bouncer.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: kube-system
spec:
  plugin:
    crowdsec-bouncer:
      enabled: true
      crowdsecMode: stream
      crowdsecLapiScheme: http
      crowdsecLapiHost: crowdsec-service.crowdsec.svc.cluster.local:8080
      crowdsecLapiKey: "${BOUNCER_KEY_traefik}"
      forwardedHeadersTrustedIPs:
        - 10.0.0.0/24
      crowdsecAppsecEnabled: true
      crowdsecAppsecHost: crowdsec-appsec-service.crowdsec.svc.cluster.local:7422
      crowdsecAppsecFailureBlock: false
      crowdsecAppsecUnreachableBlock: false
